# AndreaBonn

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  update_profile.yml  update_tech_stack.yml
assets/: intro-video-embed.md  visitors.json
scripts/: nba_today.py  quote_basket.py  repo_stars.py  scoreboard.py  snake_basket.py  snake_rendering.py  tamagotchi.py  tech_mappings.py  tech_stack.py  tech_svg.py  total_forks.py  total_stars.py
scripts/common/: __init__.py  config.py  github_api.py  parsers.py  svg.py  visitors.py
tests/: test_common.py  test_github_api.py  test_nba_today.py  test_quote_basket.py  test_repo_stars.py  test_snake_basket.py  test_snake_rendering.py  test_tamagotchi.py  test_tech_stack.py  test_total_forks.py  test_total_stars.py  test_visitors.py
