[project]
name = "andreabonn-readme"
version = "1.0.0"
description = "GitHub profile README automation — basket-themed widgets"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10.0,<12",
    "requests>=2.31,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM108"]

[tool.pytest.ini_options]
testpaths = ["tests"]
